--- a/TP2/TP2.csproj
+++ b/TP2/TP2.csproj
@@ -10,6 +10,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="System.CommandLine.DragonFruit" Version="0.3.0-alpha.20574.7" />
     <PackageReference Include="YamlDotNet" Version="10.1.0" />
   </ItemGroup>
