Implemented selection split
Excluded React app from C# project
Changed IReplacement signature

--- a/TP2/TP2.csproj
+++ b/TP2/TP2.csproj
@@ -5,6 +5,11 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <PropertyGroup>
+    <NoWarn>1591</NoWarn>
+    <DefaultItemExcludes>$(DefaultItemExcludes);Graphics\**</DefaultItemExcludes>
+  </PropertyGroup>
+  
   <ItemGroup>
     <None Include="..\.editorconfig" Link=".editorconfig" />
   </ItemGroup>
