--- a/TP2/Properties/launchSettings.json
+++ b/TP2/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "TP2": {
       "commandName": "Project",
-      "commandLineArgs": "--dataset Dataset/allitems --config config.yaml"
+      "commandLineArgs": "--dataset Dataset/allitems --config config.yaml --listen"
     }
   }
 }
